BB-2791 added overflow fix

--- a/bluebottle/common/static/sass/new-sass/modules/_video.scss
+++ b/bluebottle/common/static/sass/new-sass/modules/_video.scss
@@ -106,6 +106,7 @@
             position: relative;
             width: 100%;
             height: 510px;
+            overflow: hidden;
             background: url("/static/assets/images/img/pages/home/carousel/video-still-1.jpg")  no-repeat;
             background-repeat: no-repeat;
             background-position: 50% 50%;
